# Indentation_flattener

./: Cargo.toml  README.adoc
src/: lib.rs  parsing_lines.rs  process_line.rs  tests.rs
